--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@iconify/react": "^5.0.2",
+    "@monaco-editor/react": "^4.6.0",
+    "@uiw/react-codemirror": "^4.23.6",
+    "framer-motion": "^11.11.17",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "postcss": "^8",
